--- a/Apps/Materna/Resources/Styles/style.css
+++ b/Apps/Materna/Resources/Styles/style.css
@@ -10,6 +10,13 @@ a {
     text-decoration:    none;
 }
 
+#main-center input
+{
+    border-radius:      10px;
+    border:             solid 2px black;
+    padding:            5px;
+}
+
 #top-links a {
     color:              white;
     font-weight:        bold;
@@ -78,10 +85,10 @@ a {
 }
 
 #logo {
-    height:             70px;
-    width:              1006px;
+    height:             200px;
+    width:              1000px;
     margin:             0 auto;
-    background:         url('../Textures/logo.gif') no-repeat;
+    /*background:         url('../Textures/logo.gif') no-repeat;*/
 }
 
 #main-header {
@@ -121,4 +128,92 @@ a {
 .product .description {
     padding:            0 50px;
     background-color:   #efefef;
+}
+
+#top-bar a {
+    color:              white;
+    font-weight:        bold;
+    text-decoration:    none;
+}
+
+#top-bar {
+    width:              1000px;
+    height:             43px;
+    margin:             0 auto;
+}
+
+#top-bar-left {
+    width:              16px;
+    height:             43px;
+    float:              left;
+    background:         url('../Textures/topbar-menu-left.gif') no-repeat;
+}
+
+#top-bar-middle {
+    width:              968px;
+    height:             43px;
+    float:              left;
+    background:         url('../Textures/topbar-menu-bg.gif') repeat-x;
+}
+
+#top-bar-right {
+    width:              16px;
+    height:             43px;
+    float:              right;
+    background:         url('../Textures/topbar-menu-right.gif') no-repeat;
+}
+
+#tfheader{
+    background-color:#c3dfef;
+}
+#tfnewsearch{
+    float:              left;
+    padding:            10px;
+}
+.tftextinput{
+    width:                      300px;
+    margin:                     0;
+    padding:                    5px 15px;
+    font-family:                Arial, Helvetica, sans-serif;
+    font-size:                  14px;
+    border:                     1px solid #0076a3;
+    border-right:               0;
+    border-top-left-radius:     5px 5px;
+    border-bottom-left-radius:  5px 5px;
+}
+.tfbutton {
+    margin:                     0;
+    padding:                    5px 15px;
+    font-family:                Arial, Helvetica, sans-serif;
+    font-size:                  14px;
+    outline:                    none;
+    cursor:                     pointer;
+    text-align:                 center;
+    text-decoration:            none;
+    color:                      #ffffff;
+    border:                     solid 1px #0076a3;
+    border-right:               0;
+    background:                 #0095cd;
+    background:                 -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5));
+    background:                 -moz-linear-gradient(top,  #00adee,  #0078a5);
+    border-top-right-radius:    5px 5px;
+    border-bottom-right-radius: 5px 5px;
+}
+.tfbutton:hover {
+    text-decoration:    none;
+    background:         #007ead;
+    background:         -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e));
+    background:         -moz-linear-gradient(top,  #0095cc,  #00678e);
+}
+/* Fixes submit button height problem in Firefox */
+.tfbutton::-moz-focus-inner {
+    border: 0;
+}
+.tfclear{
+    clear: both;
+}
+
+.user-space {
+    float: right;
+    padding:            10px;
 }
